--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.application.name=service-orders
 server.servlet.context-path=/orders
 
-spring.data.mongodb.uri=mongodb+srv://marlondavid0526:AAEbJExRT0Q8inS4@aplicationitm.05edg.mongodb.net/restaurant
+# MongoDB connection
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+
