--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,8 @@ spring.application.name=service-orders
 server.servlet.context-path=/orders
 
 # MongoDB connection
-spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
+#spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI}
 
 # MongoDB connection
-#spring.data.mongodb.uri=mongodb+srv://marlondavid0526:AAEbJExRT0Q8inS4@aplicationitm.05edg.mongodb.net/restaurant
+spring.data.mongodb.uri=${SPRING_DATA_MONGODB_URI:mongodb+srv://marlondavid0526:AAEbJExRT0Q8inS4@aplicationitm.05edg.mongodb.net/restaurant}
 
